--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "react-wavesurfer-demo",
+  "name": "react-mcap-woodpanels",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andreidobrinski.github.io/react-wavesurfer-demo",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-icons": "^3.4.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "styled-components": "^4.1.3",
     "wavesurfer.js": "^2.1.3"
   },
